--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dylan Zone - Viral Products & Exclusive Offers</title>
+    <link rel="icon" type="image/png" href="https://i.postimg.cc/JnpM1GDf/Copilot-20251117-125805.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         * {
@@ -2335,4 +2336,5 @@
     </script>
 </body>
 </html>
+
 
