--- a/index.html
+++ b/index.html
@@ -1698,7 +1698,7 @@
                 dayCode: "DZ001",
                 category: "tech",
                 badge: "VIRAL 🔥",
-                image: "https://postimg.cc/rdVQYZFm",
+                image: "https://i.postimg.cc/JnpM1GDf/Copilot-20251117-125805.png",
                 imageType: "url", // "url" para URLs o "local" para imágenes locales
                 temuLink: "https://temu.to/k/umeqcy59r0n"
             },
@@ -2336,5 +2336,6 @@
     </script>
 </body>
 </html>
+
 
 
