--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dylan Zone - Viral Products & Exclusive Offers</title>
-    <link rel="icon" type="https://i.postimg.cc/PrXhCbQL/Logo.png">
+    <link rel="icon" type="image/png" href="https://i.postimg.cc/PrXhCbQL/Logo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         * {
@@ -2169,3 +2169,4 @@
     </script>
 </body>
 </html>
+
