--- a/index.html
+++ b/index.html
@@ -1313,7 +1313,17 @@
             color: var(--gray-1);
         }
     </style>
+        <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZM3D9BS503"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-ZM3D9BS503');
+</script>
 </head>
+
 <body>
     <!-- Header -->
     <header id="header">
@@ -2169,4 +2179,5 @@
     </script>
 </body>
 </html>
+
 
