--- a/index.html
+++ b/index.html
@@ -1702,16 +1702,16 @@
         // Products Database - NOW WITH IMAGE SUPPORT
         const products = [
             {
-                id: 1,
-                title: "Bluetooth Headphones Pro Max",
-                description: "Active noise cancellation, 40hrs continuous battery",
-                dayCode: "DZ001",
-                category: "tech",
-                badge: "VIRAL 🔥",
-                image: "https://i.postimg.cc/JnpM1GDf/Copilot-20251117-125805.png",
-                imageType: "url", // "url" para URLs o "local" para imágenes locales
-                temuLink: "https://temu.to/k/umeqcy59r0n"
-            }
+    id: 1,
+    title: "Portable Wireless LED Desk Lamp",
+    description: "Touch control, 3 color modes, dimmable, adjustable height, 1200mAh battery.",
+    category: "home",
+    badge: "OFFER ⚡",
+    image: "https://i.postimg.cc/GhdVn29n/5f31dfd6-e1a8-49da-917c-fe1e87aea8f4.png",
+    imageType: "url",
+    temuLink: "https://temu.to/k/pevi5y6m1kw"
+}
+
         ];
 
         // Pagination variables
@@ -2179,5 +2179,6 @@
     </script>
 </body>
 </html>
+
 
 
