--- a/index.html
+++ b/index.html
@@ -293,55 +293,15 @@
                 temuLink: "https://temu.to/k/pevi5y6m1kw"
             },
             {
-                id: 2,
-                title: "Wireless Bluetooth Earbuds",
-                description: "Noise cancellation, 30h battery life, IPX7 waterproof, touch control.",
-                category: "tech",
-                badge: "BEST SELLER",
-                image: "🎧",
-                imageType: "emoji",
-                temuLink: "https://temu.to/k/p83lb9p29fi"
-            },
-            {
-                id: 3,
-                title: "Smart Fitness Watch",
-                description: "Heart rate monitor, sleep tracking, 20 sports modes, waterproof.",
-                category: "fitness",
-                badge: "NEW",
-                image: "⌚",
-                imageType: "emoji",
-                temuLink: "https://temu.to/k/u98obio33se"
-            },
-            {
-                id: 4,
-                title: "Portable Blender",
-                description: "USB rechargeable, 400ml capacity, powerful motor, travel-friendly.",
-                category: "home",
-                badge: "TRENDING",
-                image: "🥤",
-                imageType: "emoji",
-                temuLink: "https://temu.to/k/uy9gipqfz7w"
-            },
-            {
-                id: 5,
-                title: "LED Makeup Mirror",
-                description: "3 lighting modes, adjustable brightness, portable design, USB powered.",
-                category: "beauty",
-                badge: "HOT",
-                image: "💄",
-                imageType: "emoji",
-                temuLink: "https://temu.to/k/uezcb1wqmjb"
-            },
-            {
-                id: 6,
-                title: "Gaming Mechanical Keyboard",
-                description: "RGB backlight, anti-ghosting, programmable keys, wrist rest included.",
-                category: "gaming",
-                badge: "LIMITED",
-                image: "⌨️",
-                imageType: "emoji",
-                temuLink: "https://temu.to/k/umeqcy59r0n"
-            }
+    id: 2,
+    title: "Mochila Coofay de gran capacidad 43.5x30x13 pulgadas",
+    description: "Bolso de cabina estilo casual para Ryanair, material de nailon, lavado a mano o en seco, con compartimento para laptop. Ideal para viajes y uso diario.",
+    category: "travel",
+    badge: "OFFER ⚡",
+    image: "https://i.postimg.cc/1tQFbBnc/37657e79-1248-4d0d-8686-c9f251550d15.avif",
+    imageType: "url",
+    temuLink: "https://temu.to/k/pxgo26lodqu"
+}
         ];
 
         // JavaScript minificado (excepto la parte de productos)
@@ -349,3 +309,4 @@
     </script>
 </body>
 </html>
+
