--- a/index.html
+++ b/index.html
@@ -294,14 +294,15 @@
             },
             {
     id: 2,
-    title: "Mochila Coofay de gran capacidad 43.5x30x13 pulgadas",
-    description: "Bolso de cabina estilo casual para Ryanair, material de nailon, lavado a mano o en seco, con compartimento para laptop. Ideal para viajes y uso diario.",
-    category: "travel",
+    title: "Coofay Large-Capacity Nylon Backpack 43.5x30x13 in",
+    description: "Casual cabin bag for Ryanair, durable nylon, hand wash or dry clean, stylish travel backpack with laptop space. Ideal for daily use and trips.",
+    category: "Outdoor",
     badge: "OFFER ⚡",
     image: "https://i.postimg.cc/1tQFbBnc/37657e79-1248-4d0d-8686-c9f251550d15.avif",
     imageType: "url",
     temuLink: "https://temu.to/k/pxgo26lodqu"
 }
+
         ];
 
         // JavaScript minificado (excepto la parte de productos)
@@ -309,4 +310,5 @@
     </script>
 </body>
 </html>
+
 
