--- a/index.html
+++ b/index.html
@@ -301,6 +301,15 @@
     image: "https://i.postimg.cc/1tQFbBnc/37657e79-1248-4d0d-8686-c9f251550d15.avif",
     imageType: "url",
     temuLink: "https://temu.to/k/pxgo26lodqu"
+},{
+    id: 3,
+    title: "Heat-Resistant Cutlery Storage Box",
+    description: "Organizes knives, forks, spoons; durable and heat-resistant kitchen utensil holder.",
+    category: "home",
+    badge: "OFFER ⚡",
+    image: "https://i.postimg.cc/Zng2zm0g/467b76da-d0d5-4326-b1c5-39364a2cf318.avif",
+    imageType: "url",
+    temuLink: "https://temu.to/k/pexn812at67"
 }
 
         ];
@@ -310,5 +319,6 @@
     </script>
 </body>
 </html>
+
 
 
