--- a/index.html
+++ b/index.html
@@ -310,7 +310,17 @@
     image: "https://i.postimg.cc/Zng2zm0g/467b76da-d0d5-4326-b1c5-39364a2cf318.avif",
     imageType: "url",
     temuLink: "https://temu.to/k/pexn812at67"
+},{
+    id: 4,
+    title: "Breathable All-Season Running Sneakers",
+    description: "Lightweight camo sneakers with EVA sole and fabric lining. Perfect for fitness and jump rope.",
+    category: "fitness",
+    badge: "OFFER ⚡",
+    image: "https://i.postimg.cc/wjVX7vWm/20e2546f-bc16-40fb-aaa0-f18bbe206b6e.avif",
+    imageType: "url",
+    temuLink: "https://temu.to/k/p7mgiwboxq1"
 }
+
 
         ];
 
@@ -319,6 +329,7 @@
     </script>
 </body>
 </html>
+
 
 
 
